# CovarianceMatrix

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: test.yml
src/covariance_matrix/: __init__.py  analytics.py  cli.py  core.py  data.py  excel.py  simple_core.py
tests/: test_analytics.py  test_core.py  test_data.py  test_excel.py
